--- a/index.htm
+++ b/index.htm
@@ -6,10 +6,10 @@
 <meta http-equiv="expires" content="86400">
 <meta http-equiv="content-language" content="de">
 <meta http-equiv="content-language" content="en">
-<meta http-equiv="refresh" content="60; url=https://markus-jegge.github.io/"> <!-- auto redirect -->
+<meta http-equiv="refresh" content="60; url=http://reiselog.bplaced.net"> <!-- auto redirect -->
 <meta name="author" content="Markus Jegge">
-<meta name="description" content="Reiselogbuch mit Reisebericht, Fotos und Blog - Travel reports with pictures and texts">
-<meta name="keywords" content="Reise, Reisebericht, Reiselog, Reiselogbuch, Travel, Travel Report, Blog">
+<meta name="description" content="Reiselog">
+<meta name="keywords" content="Blog">
 <meta name="robots" content="all">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
