--- a/index.htm
+++ b/index.htm
@@ -34,7 +34,7 @@
       </li>
       <p align="center">
         <br>  
-        <img src="img/move.png" alt="Move" title="We are moving..." width="400" height="282" align="middle">
+        <img src="img/movingcaution.png" alt="Move" title="We are moving..." width="400" height="282" align="middle">
         <br>
 <!--
         <a href="https://markus-jegge.github.io" title="https://markus-jegge.github.io">https://markus-jegge.github.io</a>
