--- a/index.htm
+++ b/index.htm
@@ -6,7 +6,7 @@
 <meta http-equiv="expires" content="86400">
 <meta http-equiv="content-language" content="de">
 <meta http-equiv="content-language" content="en">
-<meta http-equiv="refresh" content="60; url=http://reiselog.blaced.net"> <!-- auto redirect --><meta name="author" content="Markus Jegge">
+<meta http-equiv="refresh" content="3; url=http://reiselog.blaced.net"> <!-- auto redirect --><meta name="author" content="Markus Jegge">
 <meta name="description" content="Reiselog">
 <meta name="keywords" content="Blog">
 <meta name="robots" content="all">
@@ -22,7 +22,6 @@
 <body>
 <div id="page">
   <div id="header">
-    <!-- https://wellbeing.gmu.edu/famous-quotes-on-traveling-and-well-being/ -->    
     &quot;Every exit is an entry somewhere else.&quot; <i>Tom Stoppard</i>
   </div> <!-- end #header -->
 
@@ -34,7 +33,7 @@
       </li>
       <p align="center">
         <br>  
-        <img src="img/movingcaution.png" alt="Move" title="We are moving..." width="400" height="282" align="middle">
+        <img src="img/movingcaution.png" alt="Caution" title="Caution moving" width="150" height="150" align="middle">           
         <br>
 <!--
         <a href="https://markus-jegge.github.io" title="https://markus-jegge.github.io">https://markus-jegge.github.io</a>
