--- a/index.htm
+++ b/index.htm
@@ -6,7 +6,8 @@
 <meta http-equiv="expires" content="86400">
 <meta http-equiv="content-language" content="de">
 <meta http-equiv="content-language" content="en">
-<meta http-equiv="refresh" content="3; url=http://reiselog.blaced.net"> <!-- auto redirect --><meta name="author" content="Markus Jegge">
+<meta http-equiv="refresh" content="3; url=http://reiselog.bplaced.net"> <!-- auto redirect -->
+<meta name="author" content="Markus Jegge">
 <meta name="description" content="Reiselog">
 <meta name="keywords" content="Blog">
 <meta name="robots" content="all">
