--- a/index.htm
+++ b/index.htm
@@ -13,7 +13,7 @@
 <meta name="robots" content="all">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>Ing. Markus Jegge</title>
+<title>Reiselogbuch - Markus Jegge</title>
 <link rel="stylesheet" media="screen" href="layout.css" type="text/css">
 <link rel="stylesheet" media="print" href="layout.css" type="text/css">
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
